--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
     },
     "dependencies": {
         "@heroicons/react": "^2.0.17",
+        "@radix-ui/react-label": "^2.0.1",
+        "@radix-ui/react-switch": "^1.0.2",
+        "@radix-ui/react-toggle": "^1.0.2",
+        "class-variance-authority": "^0.6.0",
         "clsx": "^1.2.1",
+        "lucide-react": "^0.220.0",
         "next": "13.4.0",
         "next-intl": "^2.13.2",
         "react": "18.2.0",
@@ -19,7 +24,6 @@
         "tailwindcss-animate": "^1.0.5"
     },
     "devDependencies": {
-        "tailwindcss": "3.3.2",
         "@types/node": "18.16.3",
         "@types/react": "18.2.5",
         "@types/react-dom": "18.2.3",
@@ -27,6 +31,7 @@
         "eslint": "8.39.0",
         "eslint-config-next": "13.4.0",
         "postcss": "8.4.23",
+        "tailwindcss": "3.3.2",
         "typescript": "5.0.4"
     }
 }
