--- a/package.json
+++ b/package.json
@@ -1,32 +1,28 @@
 {
-    "name": "nouveau-depart",
-    "version": "0.0.1",
-    "private": true,
-    "scripts": {
-        "dev": "next dev",
-        "build": "next build",
-        "start": "next start",
-        "lint": "next lint"
-    },
-    "dependencies": {
-        "@heroicons/react": "^2.0.17",
-        "clsx": "^1.2.1",
-        "next": "13.4.0",
-        "next-intl": "^2.13.2",
-        "react": "18.2.0",
-        "react-dom": "18.2.0",
-        "tailwind-merge": "^1.12.0",
-        "tailwindcss-animate": "^1.0.5"
-    },
-    "devDependencies": {
-        "tailwindcss": "3.3.2",
-        "@types/node": "18.16.3",
-        "@types/react": "18.2.5",
-        "@types/react-dom": "18.2.3",
-        "autoprefixer": "10.4.14",
-        "eslint": "8.39.0",
-        "eslint-config-next": "13.4.0",
-        "postcss": "8.4.23",
-        "typescript": "5.0.4"
-    }
+  "name": "nouveau-depart",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
+  },
+  "dependencies": {
+    "@heroicons/react": "^2.0.18",
+    "@types/node": "20.2.3",
+    "@types/react": "18.2.6",
+    "@types/react-dom": "18.2.4",
+    "autoprefixer": "10.4.14",
+    "cookies-next": "^2.1.1",
+    "eslint": "8.41.0",
+    "eslint-config-next": "13.4.3",
+    "next": "13.4.3",
+    "next-intl": "^2.15.0-beta.4",
+    "postcss": "8.4.23",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "tailwindcss": "3.3.2",
+    "typescript": "5.0.4"
+  }
 }
