--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.18",
+    "@react-three/fiber": "^8.13.3",
     "@types/node": "20.2.3",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
+    "@types/three": "^0.152.1",
     "autoprefixer": "10.4.14",
     "cookies-next": "^2.1.1",
     "eslint": "8.41.0",
@@ -23,6 +25,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.2",
+    "three": "^0.153.0",
     "typescript": "5.0.4"
   }
 }
